fix footer text

--- a/dashboard/templates/_footer.html
+++ b/dashboard/templates/_footer.html
@@ -1,6 +1,7 @@
+<footer>
+  <p>ECoMan is published on <a href="https://github.com/cdsl-research/ecoman">GitHub</a>.</p>
+</footer>
+
 </div>
 </body>
-
-<p>ECoMan is published on <a href="https://github.com/cdsl-research/ecoman">GitHub</a>.</p>
-
 </html>
