add force shutdown

--- a/dashboard/templates/detail.html
+++ b/dashboard/templates/detail.html
@@ -13,6 +13,7 @@
         <button class="btn btn-error power-action" name="shutdown">Shutdown</button>
         <button class="btn power-action" name="suspend">Suspend</button>
         <button class="btn power-action" name="reboot">Reboot</button>
+        <button class="btn power-action" name="off">Force Power OFF</button>
       </div>
     </fieldset>
   </section>
