--- a/dashboard/templates/top.html
+++ b/dashboard/templates/top.html
@@ -4,6 +4,7 @@
   <table id="machines" class="table table-striped table-hover">
     <thead>
       <tr>
+	<th>#</th>
         <th>Power▼</th>
         <th>ESXi Node▼</th>
         <th>VM ID▼</th>
@@ -19,6 +20,7 @@
     <tbody>
       {% for machine in machines %}
       <tr>
+	<td>{{ loop.index }}</td>
         <td>
           {% if machine.power | upper() == "ON" %}
           <span class="label label-success">{{ machine.power | upper() }}</span>
