--- a/dashboard/templates/_header.html
+++ b/dashboard/templates/_header.html
@@ -5,6 +5,7 @@
   <meta charset='utf-8'>
   <title>ECoMan | {{ title }}</title>
   <link rel="stylesheet" href="/static/spectre.min.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 
 <body>
